<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <!-- الصفحة الرئيسية -->
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hillal.hhhhhhh.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <!-- إضافة حساب جديد -->
    <fragment
        android:id="@+id/addAccountFragment"
        android:name="com.hillal.hhhhhhh.ui.accounts.AddAccountFragment"
        android:label="@string/menu_add_account"
        tools:layout="@layout/fragment_add_account" />

    <!-- تفاصيل الحساب -->
    <fragment
        android:id="@+id/accountDetailsFragment"
        android:name="com.hillal.hhhhhhh.ui.accounts.AccountDetailsFragment"
        android:label="@string/menu_account_details"
        tools:layout="@layout/fragment_account_details">
        <argument
            android:name="accountId"
            app:argType="integer" />
        <action
            android:id="@+id/action_accountDetailsFragment_to_addTransactionFragment"
            app:destination="@id/addTransactionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- إضافة عملية -->
    <fragment
        android:id="@+id/addTransactionFragment"
        android:name="com.hillal.hhhhhhh.ui.transactions.AddTransactionFragment"
        android:label="@string/menu_add_transaction"
        tools:layout="@layout/fragment_add_transaction">
        <argument
            android:name="accountId"
            app:argType="integer" />
    </fragment>

    <!-- التقارير -->
    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.hillal.hhhhhhh.ui.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <!-- الإعدادات -->
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.hillal.hhhhhhh.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <!-- الحسابات -->
    <fragment
        android:id="@+id/navigation_accounts"
        android:name="com.hillal.hhhhhhh.ui.accounts.AccountsFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts" />

</navigation>